# Cedis

./: .gitignore  API_DOCUMENTATION.md  CMakeLists.txt  CMakePresets.json  INTEGRATION_EXAMPLES.md  QUICK_REFERENCE.md  README.md  build.sh  install_dependencies.sh  main.cpp
.github/workflows/: ci.yml
include/: Parser.h  command.h  connection.h  database.h  handleCMD.h  parser.h  server.h
include/commands/: command.h  delCommand.h  echo.h  echoCommand.h  existsCommand.h  getCommand.h  ping.h  pingCommand.h  setCommand.h
src/: CMakeLists.txt  Cedis.cpp  Cedis.h  connection.cpp  database.cpp  handleCMD.cpp  main.cpp  parser.cpp
src/commands/: ping.h
